@startuml
class adapters.MemoryGameAdapter {
- {static} int CAMERA_DISTANCE
- ImageUtil imageUtil
- MemoryGameListener listener
- Map<String,String> imageCache
+ void setListener(MemoryGameListener)
+ void setImageCache(Map<String,String>)
+ void setCards(List<Card>)
+ CardViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(CardViewHolder,int)
+ void onViewRecycled(CardViewHolder)
}


interface adapters.MemoryGameAdapter$MemoryGameListener {
~ void onCardClicked(Card,int)
~ boolean isMyTurn()
~ void animateFlipOpen(ImageView,String)
~ void animateFlipClose(ImageView)
}

class adapters.MemoryGameAdapter$CardViewHolder {
~ ImageView cardImage
}

class adapters.MedicationUsageAdapter {
- Map<String,Medication> medicationMap
- OnUsageActionListener listener
+ void setListener(OnUsageActionListener)
+ void setMedicationMap(Map<String,Medication>)
+ UsageViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(UsageViewHolder,int)
}


interface adapters.MedicationUsageAdapter$OnUsageActionListener {
~ void onDelete(MedicationUsage)
}

class adapters.MedicationUsageAdapter$UsageViewHolder {
~ TextView txtName
~ View btnDelete
}



bases.BaseAdapter <|-- adapters.MemoryGameAdapter
adapters.MemoryGameAdapter +.. adapters.MemoryGameAdapter$MemoryGameListener
adapters.MemoryGameAdapter +.. adapters.MemoryGameAdapter$CardViewHolder
adapters.ViewHolder <|-- adapters.MemoryGameAdapter$CardViewHolder
bases.BaseAdapter <|-- adapters.MedicationUsageAdapter
adapters.MedicationUsageAdapter +.. adapters.MedicationUsageAdapter$OnUsageActionListener
adapters.MedicationUsageAdapter +.. adapters.MedicationUsageAdapter$UsageViewHolder
adapters.ViewHolder <|-- adapters.MedicationUsageAdapter$UsageViewHolder
@enduml